--- a/environment.yml
+++ b/environment.yml
@@ -14,3 +14,5 @@ dependencies:
     - pytest>=7.0.0
     - black>=23.3.0
     - isort>=5.12.0
+    - python-rtmidi>=1.4.9
+    - python-osc>=1.8.0    # For OSC communication with Ableton
